fix missing background image for cover css class

--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -205,7 +205,7 @@
 .cover {
     color: rgb(241, 241, 241);
     height: 100%;
-    background: url('http://lakto.org/assets/img/cover.jpg') no-repeat center center fixed;
+    background: url('https://it-cru.de/sites/it-cru.de/files/media/images/2018-12/services_background.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
